feat(ss): names for subsystems
/listClients includes subsystem name if present

Refs: XRDDEV-2761